# clairvoyance

./: .gitignore  LICENSE  README.md  Vagrantfile  setup.sh
compiler/: CMakeLists.txt  Makefile  README.txt
compiler/projects/: CMakeLists.txt
compiler/projects/include/DAE/Utils/SkelUtils/: headers.h
compiler/projects/include/SWOOP/Transform/SwoopDAE/: BasicSwoop.h
compiler/projects/include/Util/Analysis/: AliasUtils.h  LoopCarriedDependencyAnalysis.h  LoopDependency.h
compiler/projects/include/Util/Annotation/: MetadataInfo.h
compiler/projects/include/Util/DAE/: DAEUtils.h
compiler/projects/include/Util/Transform/BranchMerge/: BranchMerge.h
compiler/projects/src/: CMakeLists.txt
compiler/projects/src/DAE/: CMakeLists.txt
compiler/projects/src/DAE/Utils/: CMakeLists.txt
compiler/projects/src/DAE/Utils/LoopExtract/: CMakeLists.txt  LoopExtract.cpp
compiler/projects/src/DAE/Utils/SkelUtils/: LoopUtils.cpp  Utils.cpp
compiler/projects/src/SWOOP/: CMakeLists.txt
compiler/projects/src/SWOOP/Transform/: CMakeLists.txt  PhaseStitching.cpp  PhaseStitching.h
compiler/projects/src/SWOOP/Transform/OptimisticSwoop/: CMakeLists.txt  OptimisticSwoop.cpp
compiler/projects/src/SWOOP/Transform/SwoopDAE/: CMakeLists.txt  FindInstructions.cpp  FindInstructions.h  LCDHandler.cpp  LCDHandler.h  SwoopDAE.cpp
compiler/projects/src/SWOOP/Utils/: CMakeLists.txt  DCEutils.cpp  LongLatency.cpp
compiler/projects/src/SWOOP/Utils/MarkLoopsToSwoopify/: CMakeLists.txt  MarkLoopsToSwoopify.cpp
compiler/projects/src/Util/: CMakeLists.txt
compiler/projects/src/Util/Analysis/: AliasUtils.cpp  BasicLCDAnalysis.cpp  LoopDependency.cpp  MarkLCD.cpp
compiler/projects/src/Util/Annotation/: CMakeLists.txt  MetadataInfo.cpp
compiler/projects/src/Util/Annotation/BranchAnnotate/: CMakeLists.txt  Replace.cpp  SBPAnnotator.cpp
compiler/projects/src/Util/Annotation/CFGIndirectionCount/: CFGIndirectionCount.cpp  CMakeLists.txt
compiler/projects/src/Util/DAE/: DAEUtils.cpp
compiler/projects/src/Util/Loops/: CMakeLists.txt  ForcedLoopUnroll.cpp
compiler/projects/src/Util/Transform/BranchMerge/: BranchMerge.cpp
experiments/swoop/runs/: benchmarks.py  jobs.py  mails.py  parse_experiments.py  plot_experiments.py  plotting_utils.py  run_experiments.py
experiments/swoop/sources/: Makefile
experiments/swoop/sources/common/: Makefile.environment
(+9 files in other folders)
